--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 @layer base {
-  @font-face {
-    font-family: "Rubik";
-    src: local("Rubik"),
-      url("../assets/fonts/Rubik/Rubik-VariableFont_wght.ttf")
-        format("truetype");
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "Rubik";
-    src: local("Rubik"),
-      url("../assets/fonts/Rubik/Rubik-Italic-VariableFont_wght.ttf")
-        format("truetype");
-    font-style: italic;
-  }
+    @font-face {
+        font-family: 'Rubik';
+        src: local('Rubik'),
+            url('../assets/fonts/Rubik/Rubik-VariableFont_wght.ttf')
+                format('truetype');
+        font-style: normal;
+    }
+    @font-face {
+        font-family: 'Rubik';
+        src: local('Rubik'),
+            url('../assets/fonts/Rubik/Rubik-Italic-VariableFont_wght.ttf')
+                format('truetype');
+        font-style: italic;
+    }
 }
