--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,14 @@
 @font-face {
   font-family: 'Rubik';
+  font-style: normal;
   src: local('Rubik'),
     url('../fonts/Rubik/Rubik-VariableFont_wght.ttf') format('truetype');
-  font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Rubik';
+  font-style: italic;
   src: local('Rubik'),
     url('../fonts/Rubik/Rubik-Italic-VariableFont_wght.ttf') format('truetype');
-  font-style: italic;
+  font-display: swap;
 }
